0026683: VRML 2.0: ImageTexture node not written