src/VrmlData/VrmlData_Node.cxx
@@ -574,11 +574,9 @@ Standard_Boolean VrmlData_Appearance::IsDefault () const
   Standard_Boolean aResult (Standard_True);
   if (myMaterial.IsNull() == Standard_False)
     aResult = myMaterial->IsDefault();
-  if (aResult == Standard_False)
-    if (myTexture.IsNull() == Standard_False)
+  if (aResult && myTexture.IsNull() == Standard_False)
       aResult = myTexture->IsDefault();
-  if (aResult == Standard_False)
-    if (myTTransform.IsNull() == Standard_False)
+  if (aResult && myTTransform.IsNull() == Standard_False)
       aResult = myTTransform->IsDefault();
   return aResult;
 }
@@ -647,3 +645,31 @@ VrmlData_ErrorStatus VrmlData_ImageTexture::Read (VrmlData_InBuffer& theBuffer)
   return aStatus;
 }
 
+//=======================================================================
+//function : Write
+//purpose  : 
+//=======================================================================
+
+VrmlData_ErrorStatus VrmlData_ImageTexture::Write(const char *thePrefix)  const
+{
+  VrmlData_ErrorStatus aStatus = VrmlData_StatusOK;
+  const VrmlData_Scene& aScene = Scene();
+  static char header[] = "ImageTexture {";
+  if (aScene.IsDummyWrite() == Standard_False &&
+      OK(aStatus, aScene.WriteLine(thePrefix, header, GlobalIndent())))
+  {
+    TCollection_AsciiString url = "\"";
+    url += URL().First();
+    url += "\"";
+
+    try {
+      aStatus = aScene.WriteLine("url ", url.ToCString());
+    }
+    catch (...)
+    {
+      
+    }
+    aStatus = WriteClosing();
+  }
+  return aStatus;
+}
